# Baseball-Injury-Prediction

./: README.md  baseball_models.Rmd  baseball_models.html  fangraphs_clean.py  fangraphs_raw.py  main.py  make_numerical_columns.ipynb  precedes_injury.py  pyproject.toml  release_speed.ipynb  statcast_clean.py  statcast_raw.py
fangraphs_htmls/: 2020_elbow.html  2020_forearm.html  2020_shoulder.html  2020_tommy.html  2020_undisclosed.html  2021_elbow.html  2021_forearm.html  2021_shoulder.html  2021_tommy.html  2021_undisclosed.html  2022_elbow.html  2022_forearm.html  2022_shoulder.html  2022_tommy.html  2022_undisclosed.html  2023_elbow.html  2023_forearm.html  2023_shoulder.html  2023_tommy.html  2023_undisclosed.html  2024_elbow.html  2024_forearm.html  2024_shoulder.html  2024_tommy.html
